Fixes tests, Adds `call` function.

--- a/test/KzykHys/TwigExtensions/Resources/Text/filter_filesizeformat.twig
+++ b/test/KzykHys/TwigExtensions/Resources/Text/filter_filesizeformat.twig
@@ -2,3 +2,4 @@
 {{ 1024|filesizeformat(true) }}
 {{ 1|filesizeformat }}
 {{ 2|filesizeformat }}
+{{ (1152921504606850000*1048576*1024)|filesizeformat }}
